{
    "name": "Controls",
    "maps": [
        {
            "name": "RuneCreatingUI",
            "id": "70420c8d-d3f9-448f-8958-45cc3dab5a28",
            "actions": [
                {
                    "name": "DeleteRune",
                    "type": "Button",
                    "id": "8ccd02ad-9358-40c5-8942-090c9ba0c56f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NewRune",
                    "type": "Button",
                    "id": "a66a0e3a-9d37-4740-bae6-476a81c901cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectRecognized",
                    "type": "Button",
                    "id": "474c8e53-f27c-47f0-9536-8afa738bea6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3b6d1181-9c7f-4cb1-9f5b-518a3e913739",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteRune",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90de0f14-f3c7-43f1-936f-b5a9c01846b6",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NewRune",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87718150-44f6-4e8f-9a14-56b0f5503ca4",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectRecognized",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Move",
            "id": "b247404a-9fcf-4bf3-a0c2-2ea73f69ce4d",
            "actions": [
                {
                    "name": "Direction",
                    "type": "Value",
                    "id": "61dcbc09-655d-46da-9e83-ef90cfa56d5b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4271fd62-f102-4561-af8e-78397c95c3ce",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Draw",
            "id": "8180be9d-9e8f-4520-9b34-6fe273809ff1",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "03add1ce-e451-4256-9d1c-458d0e496335",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Contact",
                    "type": "Button",
                    "id": "7452fa12-faa5-466c-a921-78453d0a5976",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "94787778-87a4-4178-9976-1ab7126ef9d9",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "528ebb1c-0209-488a-8723-1e34f407391f",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Contact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Aim",
            "id": "8e65c0ed-8c57-427d-abf3-117dc72e6565",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "3f734fce-d8f1-44c0-8e9b-6e250165294d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Contact",
                    "type": "Button",
                    "id": "e75f59a8-fd81-4005-8462-7a953ef7a520",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f1ff5918-d48e-4057-96fb-2dc191e6b422",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e355618-4ce9-4dce-a24d-776b9fb1fdff",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Contact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Swing",
            "id": "0e4dd5a9-0596-4958-858a-930817ae8404",
            "actions": [
                {
                    "name": "Direction",
                    "type": "Value",
                    "id": "3fe8d924-6c4e-4b06-b620-8991b7e77972",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Contact",
                    "type": "Button",
                    "id": "f7cd804e-a0c9-4a4a-95f6-d56967637271",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2fc436a5-22c2-48f3-8f3e-2b7de1ee7f15",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8dc6f905-0318-4315-9c79-40d6d6cd861d",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Contact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}